--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_API = '/api/v1/admin'
 
+VUE_APP_BASE_URL = 'https://fate-shop.wonderfate.com'
